rectifications css page creation de notes de frais

--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,10 @@ input:active, input:focus, textarea:active, textarea:focus, select:active, selec
     
 }
 
+.button:hover {
+    background-color: #16811A;
+}
+
 /* footer global pour toutes les pages */
 footer{
     display:table;
