--- a/css/style.css
+++ b/css/style.css
@@ -161,3 +161,9 @@ footer{
     text-align: right;
     font-size: 20px;
 }
+
+/****************** CSS Specifique a la page : creation d'une note de frais *********************/
+.menu-button{
+	width:170px;
+	cursor: pointer;
+}
